<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="org.wit.houses.activities.HouseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/primaryTextColor" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:layout_marginTop="25dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/houseAddress"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_houseAddress"
                    android:inputType="text"
                    android:maxLength="80"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/listPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_listPrice"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/bedrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_bedrooms"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/bathrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_bathrooms"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_houseDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/auctioneer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_auctioneer"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/soldPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_soldPrice"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:background="@color/primaryLightColor"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addHouse"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>